--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-Lecture 1.aux
-Lecture 1.fdb_latexmk
-Lecture 1.fls
-Lecture 1.log
-Lecture 1.synctex.gz
+*.aux
+*.fdb_latexmk
+*.fls
+*.log
+*.synctex.gz
